# pipsqueak3

./: .codeclimate.yml  .codecov.yml  .coveragerc  .dockerignore  .gitignore  .hound.yml  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Docker.md  Dockerfile  LICENSE  LICENSE.md  Pipfile  README.md  TESTING.md  config.py  develop.Dockerfile  docker-compose.template.yml  docker-compose.yml  initdb.sql  linting.Dockerfile  main.py  mechaclient.py  odbcinst.ini  pylint.ini  pyproject.toml  pytest.ini  pytest.sh  requirements.txt  setup.cfg  teamcity-services.yml  unit_tests.py
.circleci/: config.yml
.github/: CODEOWNERS
.teamcity/: get_build_id.sh
.teamcity_tools/: get_build_id.sh  linting.sh  shared_lib.sh  testing.sh
Modules/: Commands.py  Handlers.py  RatMama.py  Rat_Board.py  Rats.py  User.py  __init__.py  argparsing.py  cli_manager.py  commandcontext.py  config.py  constants.py  context.py  database_manager.py  epic.py  event.py  fact.py  fact_manager.py  galaxy.py  graceful_errors.py  mark_for_deletion.py  mechaclient.py  permissions.py  rat.py  rat_board.py  rat_cache.py  rat_command.py  rat_facts.py  rat_quotation.py  rat_rescue.py  rats.py  rules.py  star_system.py  trigger.py  user.py
certs/: certs.md
commands/: __init__.py  debug.py  facts.py
config/: circle.json  circle.toml  config.template.json  config.template.toml  configuration.md  testing.json  testing.toml
database/: __init__.py  database_manager.py
logs/: logs.md
postgres-files/: Dockerfile  init.sh  psql-setup.sh  psql-startup.sh
ratlib/: names.py
src/: __main__.py  (+1 more)
(+146 files in other folders)
