[tool.poetry]
name = "pipsqueak3"
version = "3.1.0"
description = "Mechasqueak3"
authors = ["Joshua Salzedo <thHunkn0WNd@gmail.com>"]
license = "BSD-3-Clause"
packages = [
    { include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.8"
aiohttp = "*"
pydle = ">=0.9.1"
pure-sasl = "*"
humanfriendly = "*"
psycopg2-binary = "*"
toml = "*"
loguru = "*"
pluggy = "*"
async_lru = "^1.0.2"
prometheus_client = "^0.7.1"
prometheus_async = "^19.2.0"
pyparsing = "^2.4.7"
graypy = "^2.1.0"
python-dateutil = "^2.8.1"
simplejson = "^3.17.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pylint = "*"
pytest-httpserver = "*"
codecov = "*"
pycodestyle = "*"
ipython = "^7.10.2"
black = "^19.10b0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
