[tool.poetry]
name = "pipsqueak3"
version = "3.0.0b3"
description = "Mechasqueak3"
authors = ["Joshua Salzedo <thHunkn0WNd@gmail.com>"]
license = "BSD-3-Clause"
packages = [
    { include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.8"
aiohttp = "*"
pydle = ">=0.9.1"
pure-sasl = "*"
humanfriendly = "*"
psycopg2-binary = "*"
toml = "*"
loguru = "*"
pluggy = "*"
async_lru = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pylint = "*"
pytest-httpserver = "*"
codecov = "*"
pycodestyle = "*"
hypothesis = "^5.8.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
